@@ -1,3 +1,4 @@
+* Improve treeview headers
 * Update states of both toolbar and menu
 * Improve toolbar order
 * Make readonly, required and invalid widget themable
